29_outname/grade.txt
Grading at Fri Jul 19 05:02:19 UTC 2019
Attempting to compile:
outname.c: In function ‘computeOutputFileName’:
outname.c:9:3: error: implicit declaration of function ‘strcopy’ [-Werror=implicit-function-declaration]
   strcopy(outName, inputName);
   ^
cc1: all warnings being treated as errors
The code did not compile!

Overall Grade: F
